# serializer version: 1
# name: test_feature_dep_column_selection
  list([
    dict({
      'field_data_version': dict({
        'default': '34038680',
      }),
      'field_provenance': dict({
        'default': '34038680',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'default': '13044536',
      }),
      'field_provenance': dict({
        'default': '13044536',
      }),
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_feature_dep_renames
  list([
    dict({
      'field_data_version': dict({
        'default': '11045469',
      }),
      'field_provenance': dict({
        'default': '11045469',
      }),
      'sample_provenance': '46772360',
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'default': '56553557',
      }),
      'field_provenance': dict({
        'default': '56553557',
      }),
      'sample_provenance': '15275398',
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_feature_graph_integration_with_provenance_by_field
  dict({
    'field_a': '4086c66a',
    'field_b': '7c343b7b',
  })
# ---
# name: test_filters_applied_before_join
  list([
    dict({
      'field_data_version': dict({
        'default': '17664376',
      }),
      'field_provenance': dict({
        'default': '17664376',
      }),
      'sample_uid': 3,
    }),
    dict({
      'field_data_version': dict({
        'default': '12005045',
      }),
      'field_provenance': dict({
        'default': '12005045',
      }),
      'sample_uid': 4,
    }),
  ])
# ---
# name: test_multi_upstream_join_on_common_id_columns
  list([
    dict({
      'field_data_version': dict({
        'default': '17370060',
      }),
      'field_provenance': dict({
        'default': '17370060',
      }),
      'sample_uid': 2,
    }),
    dict({
      'field_data_version': dict({
        'default': '14011145',
      }),
      'field_provenance': dict({
        'default': '14011145',
      }),
      'sample_uid': 3,
    }),
  ])
# ---
